--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "@msgpack/msgpack": "^2.8.0",
     "@supabase/supabase-js": "^2.38.0",
     "dotenv": "^16.3.1",
+    "uuid": "^9.0.1",
     "ws": "^8.14.2"
   },
   "devDependencies": {
